# bible

./: .gitignore  Cargo.toml  README.md  build.rs  get_bible_sqlite_db.sh
.github/workflows/: rust.yml
src/: config.rs  db.rs  downloader.rs  errors.rs  getter.rs  main.rs  parser.rs  structs.rs
