[package]
name = "bible"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
dirs = "5.0.1"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
reqwest = { version = "0.12.4", features = ["blocking"] }
