[package]
name = "bible"
version = "0.1.0"
edition = "2021"
description = "A command-line tool for reading translations of the Bible."
repository = "https://github.com/bigmac7/bible"
readme = "README.md"
keywords = ["bible", "command-line", "tool", "cli"]
license = "MIT"
categories = ["command-line-utilities"]
[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
dirs = "5.0.1"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
reqwest = { version = "0.12.4", features = ["blocking"] }
